adaptive layout for index.html
-feat: adaptive background images
-feat: adaptive gallery images
-feat: adaptive layout for index.html

--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -62,6 +62,7 @@
     box-shadow: none;
   }
   &--footer {
+    align-self: center;
     display: flex;
     justify-content: flex-end;
     align-items: center;
