--- a/sass/utils/variables.scss
+++ b/sass/utils/variables.scss
@@ -23,7 +23,8 @@ $font-size-normal: 16px;
 $font-size-title: 18px;
 $font-size-modal: 20px;
 $font-size-logo-mobile: 24px;
-$font-size-logo-other: 26px;
+$font-size-logo-desktop: 26px;
+$font-size-mobile-tertiary: 28px;
 $font-size-mobile-secondary: 34px;
 $font-size-section: 36px;
 $font-size-mobile-primary: 40px;
@@ -35,9 +36,12 @@ $font-weight-bold: 700;
 $font-weight-heavy: 900;
 
 $line-height-normal: 1.17;
+$line-height-title: 1.18;
 $line-height-menu: 1.22;
 $line-height-input: 1.25;
 $line-height-main: 1.36;
+$line-height-logo: 1.38;
+$line-height-form: 1.5;
 $line-height-description: 1.56;
 $line-height-filter: 1.62;
 $line-height-subtitle: 1.71;
