--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -8,26 +8,71 @@
   &__container {
     display: flex;
     flex-wrap: wrap;
+    flex-direction: column;
     justify-content: flex-start;
+    align-items: center;
+    gap: 60px;
+    @include tablet {
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: flex-start;
+    }
+    @include desktop {
+      justify-content: flex-start;
+      gap: 70px;
+    }
+  }
+  &__sub-container:nth-child(1) {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    @include tablet {
+      margin-left: 61px;
+    }
+    @include desktop {
+      margin-left: 0;
+      align-items: normal;
+    }
   }
   &__sub-container:nth-child(2) {
-    padding-left: 70px;
-    padding-top: 12px;
+    text-align: center;
+    gap: 20px;
+    @include tablet {
+      margin-top: 5px;
+      margin-right: 74px;
+    }
+    @include desktop {
+      text-align: left;
+      margin-top: 12px;
+      margin-right: 4px;
+    }
   }
   &__sub-container:nth-child(3) {
-    padding-top: 12px;
-    padding-left: 78px;
+    align-items: center;
     flex: 1 auto;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    width: 100%;
+    @include desktop {
+      width: auto;
+      margin-top: 12px;
+      align-items: flex-start;
+    }
   }
   &__address {
     font-style: normal;
     padding-top: 20px;
     line-height: $line-height-subtitle;
+    text-align: center;
+    @include desktop {
+      text-align: left;
+    }
   }
   &__link {
     display: inline-block;
     text-decoration: none;
-    padding-top: 5px;
+    padding-top: 4px;
     color: rgba(255, 255, 255, 0.6);
     transition-property: color;
     transition-duration: 250ms;
@@ -43,18 +88,29 @@
     font-size: $font-size-subtitle;
     line-height: $line-height-normal;
     text-transform: uppercase;
-    padding-bottom: 20px;
   }
   &__form {
     width: 100%;
     height: 70px;
-    padding-top: 20px;
     display: flex;
-    gap: 12px;
+    flex-direction: column;
+    gap: 20px;
+    margin-bottom: 50px;
+    @include tablet {
+      max-width: 450px;
+    }
+    @include desktop {
+      height: 50px;
+      flex-direction: row;
+      max-width: 570px;
+      gap: 12px;
+      margin-bottom: 0;
+    }
   }
   &__input {
     flex: 1 1 auto;
     height: 100%;
+    min-height: 50px;
     background-color: transparent;
     border: 1px solid $color-border-tertiary;
     border-radius: 4px;
