--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -2,10 +2,14 @@
   &__title {
     font-weight: $font-weight-bold;
     font-size: $font-size-modal;
-    line-height: $line-height-normal;
+    line-height: $line-height-form;
     letter-spacing: $letter-spacing-normal;
     text-align: center;
     padding-bottom: 12px;
+
+    @include desktop {
+      line-height: $line-height-normal;
+    }
   }
   &__label {
     position: relative;
@@ -62,29 +66,35 @@
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   }
   &__textarea::placeholder {
-    font-size: $font-size-label;
+    font-size: $font-size-subtitle;
     line-height: $line-height-normal;
     letter-spacing: $letter-spacing-tight;
     color: $color-placeholder-secondary;
+    @include desktop {
+      font-size: $font-size-label;
+    }
   }
   &__textarea:focus-within {
     border: 1px solid $color-selection;
   }
   &__checkbox-container {
-    margin-left: 15px;
-    margin-bottom: 30px;
-    display: inline-flex;
+    margin: 0 auto 30px;
+    display: flex;
+    justify-content: center;
     align-items: center;
   }
   &__checkbox {
     position: absolute;
-    left: 57px;
+    left: 46px;
     clip: rect(1px 1px 1px 1px);
     clip-path: polygon(0px 0px, 0px 0px, 0px 0px, 0px 0px);
+    @include desktop {
+      left: 57px;
+    }
   }
   &__checkbox-label {
-    width: 16px;
-    height: 15px;
+    min-width: 16px;
+    min-height: 15px;
     margin-right: 7px;
     border-radius: 2px;
     border: 2px solid $color-text-main;
@@ -94,8 +104,17 @@
   }
   &__icon-checked {
     position: absolute;
-    left: 58px;
     pointer-events: none;
+    left: 42px;
+    @media screen and (min-width: 473px) {
+      left: calc(42px + (100vw - 472px) / 2);
+    }
+    @media screen and (min-width: 480px) {
+      left: 46px;
+    }
+    @include desktop {
+      left: 58px;
+    }
   }
   &__checkbox:checked + &__checkbox-label {
     background-color: $color-selection;
@@ -105,10 +124,14 @@
     border-color: $color-selection;
   }
   &__policy {
-    font-size: $font-size-subtitle;
-    line-height: $line-height-subtitle;
+    font-size: $font-size-label;
+    line-height: $line-height-normal;
     letter-spacing: $letter-spacing-normal;
     color: $color-text-tertiary;
+    @include desktop {
+      font-size: $font-size-subtitle;
+      line-height: $line-height-subtitle;
+    }
   }
   &__link-policy {
     color: $color-selection;
