--- a/sass/components/_gallery.scss
+++ b/sass/components/_gallery.scss
@@ -5,12 +5,20 @@
   flex-wrap: wrap;
   justify-content: center;
   gap: 30px;
-  &__item--asset {
-    flex-basis: calc((100% - 3 * 30px) / 4);
+  &__item {
+    flex-basis: 100%;
+    @include tablet {
+      flex-basis: calc((100% - 30px) / 2);
+    }
+    @include desktop {
+      flex-basis: calc((100% - 3 * 30px) / 4);
+    }
+  }
+  &__item--scope {
+    position: relative;
+    flex-basis: calc((100% - 2 * 30px) / 3);
   }
   &__item--client {
-    flex-basis: calc((100% - 5 * 30px) / 6);
-    min-width: 170px;
     max-height: 92px;
     padding-top: 16px;
     padding-bottom: 16px;
@@ -21,14 +29,21 @@
     transition-property: color;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    flex-basis: calc((100% - 30px) / 2);
+    @include tablet {
+      flex-basis: calc((100% - 2 * 30px) / 3);
+    }
+    @include desktop {
+      flex-basis: calc((100% - 5 * 30px) / 6);
+    }
   }
   &__item--client:hover,
   &__item--client:focus {
     cursor: pointer;
     color: $color-selection;
   }
-  &__item--scope {
-    position: relative;
+  &__item--project {
+    flex-basis: calc((100% - 2 * 30px) / 3);
   }
   &__figure {
     margin: 0;
@@ -92,6 +107,8 @@
   }
   &__img {
     display: block;
+    width: 100%;
+    height: auto;
   }
   &__link {
     color: inherit;
@@ -117,6 +134,11 @@
     line-height: $line-height-normal;
     letter-spacing: $letter-spacing-normal;
     text-transform: uppercase;
+    text-align: center;
+
+    @include tablet {
+      text-align: left;
+    }
   }
   &__title--team {
     font-weight: $font-weight-medium;
