--- a/sass/components/_landing-page.scss
+++ b/sass/components/_landing-page.scss
@@ -1,25 +1,78 @@
 .landing-page {
-  max-height: 600px;
-  padding-top: 200px;
-  padding-bottom: 200px;
+  max-height: 400px;
+  padding: 118px 0;
   background: linear-gradient(
       to top,
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url(../images/landing_page_desktop@1x.jpg) no-repeat center;
-  background-color: $color-background-primary;
+    url(../images/landing_page_mobile@1x.jpg) no-repeat center;
   color: $color-background-secondary;
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    background: linear-gradient(
+        to top,
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url(../images/landing_page_mobile@2x.jpg) no-repeat center;
+  }
+  @include tablet {
+    background: linear-gradient(
+        to top,
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url(../images/landing_page_tablet@1x.jpg) no-repeat center;
+    @media (min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+      background: linear-gradient(
+          to top,
+          rgba(47, 48, 58, 0.4),
+          rgba(47, 48, 58, 0.4)
+        ),
+        url(../images/landing_page_tablet@2x.jpg) no-repeat center;
+    }
+  }
+
+  @include desktop {
+    max-height: 600px;
+    padding: 200px 0;
+    background: linear-gradient(
+        to top,
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url(../images/landing_page_desktop@1x.jpg) no-repeat center;
+    @media (min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+      background: linear-gradient(
+          to top,
+          rgba(47, 48, 58, 0.4),
+          rgba(47, 48, 58, 0.4)
+        ),
+        url(../images/landing_page_desktop@2x.jpg) no-repeat center;
+    }
+  }
   &__title {
     font-weight: $font-weight-heavy;
-    font-size: $font-size-main;
-    line-height: $line-height-main;
+    font-size: $font-size-logo-desktop;
+    line-height: $line-height-filter;
     letter-spacing: $letter-spacing-wide;
     text-transform: uppercase;
     text-align: center;
-    max-width: 696px;
+    max-width: 365px;
     margin: 0 auto;
     padding-bottom: 30px;
+
+    @include desktop {
+      font-size: $font-size-main;
+      line-height: $line-height-main;
+      max-width: 696px;
+    }
   }
   &__button {
     display: block;
