--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -2,14 +2,13 @@
   font-family: Raleway;
   font-weight: $font-weight-bold;
   font-size: $font-size-logo-mobile;
-  line-height: $line-height-normal;
+  line-height: $line-height-logo;
   letter-spacing: $letter-spacing-normal;
   display: inline-block;
   text-decoration: none;
   color: inherit;
-
-  @include tablet {
-    font-size: $font-size-logo-other;
+  @include desktop {
+    font-size: $font-size-logo-desktop;
   }
 
   &__web {
