--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -2,7 +2,8 @@
   position: absolute;
   z-index: 1;
   display: block;
-  width: 528px;
+  width: calc(100vw - 30px);
+  max-width: 450px;
   top: 50%;
   left: 50%;
   background-color: $color-background-secondary;
@@ -17,4 +18,7 @@
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   color: $color-text-main;
   padding: 40px;
+  @include desktop {
+    max-width: 528px;
+  }
 }
