--- a/sass/components/_social.scss
+++ b/sass/components/_social.scss
@@ -6,11 +6,15 @@
     height: 44px;
     border-radius: 50%;
     padding: 12px;
-    margin-bottom: 30px;
+    margin-bottom: 24px;
     color: $color-icon-primary;
     transition-property: color, background-color;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    @include desktop {
+      margin-bottom: 30px;
+      margin-right: 4px;
+    }
   }
   &__item:not(:last-child) {
     margin-right: 6px;
@@ -18,6 +22,8 @@
   &__item--footer {
     color: $color-background-secondary;
     background-color: $color-background-quaternary;
+    margin-top: 20px;
+    margin-bottom: 0;
   }
   &__item:hover,
   &__item:focus {
